Nav bar beta implemented

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Stack+Sans+Text:wght@299&display=swap" rel="stylesheet">
  </head>
  <body>
+
+    <div class="top-bar">
+        <img class="logo" src="./assets/img/nav-bar/logo-nav-bar.png"
+            <a href="#">Para usuarios</a>
+            <a href="#">¿Dónde comprar?</a>
+            <a href="#">Para comercios</a>
+            <a href="#">Proyecto Impulso</a>
+            <a href="#">Preguntas Frecuentes</a>
+        </div>
+    </div>
+
     <div class="parent">
         <h3>¿Por qué comprar con cashea?</h3>
         <h1>Es una alternativa de compra<br>accesible para que<br>te lleves lo que necesitas hoy</h1>
