--- a/index.html
+++ b/index.html
@@ -45,5 +45,19 @@
         </div>
       
     </div>
+
+
+
+    <footer>
+        <div class="footer-content">
+            <img class="footer-logo" src="./assets/img/footer/logo-footer.png">
+            <div class="footer-links">
+                <a href="#">Términos y condiciones</a>
+                <a href="#">Política de privacidad</a>
+                <a href="#">Preguntas frecuentes</a>
+            </div>
+        </div>
+    </footer>
+
  </body>
 </html>
