Footer info added

--- a/index.html
+++ b/index.html
@@ -52,12 +52,23 @@
         <div class="footer-content">
             <img class="footer-logo" src="./assets/img/footer/logo-footer.png">
             <div class="footer-links">
+                <h4> Productos </h4>
+                <a href="#">Términos y condiciones</a>
+                <a href="#">Política de privacidad</a>
+                <a href="#">Preguntas frecuentes</a>
+                <h4> Ayuda </h4>
+                <a href="#">Términos y condiciones</a>
+                <a href="#">Política de privacidad</a>
+                <a href="#">Preguntas frecuentes</a>
+                <h4> Cashea Envíos </h4>
                 <a href="#">Términos y condiciones</a>
                 <a href="#">Política de privacidad</a>
                 <a href="#">Preguntas frecuentes</a>
             </div>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 
  </body>
 </html>
