More footer info added

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
                 <a href="#">Términos y condiciones</a>
                 <a href="#">Política de privacidad</a>
                 <a href="#">Preguntas frecuentes</a>
+
+                <h4>Copyright © 2026 Cashea. RIF J-501934070, Grupo Cashea VE, C.A.</h4>
+                <a href="#">Términos y condiciones</a>
+                <a href="#">Cookies</a>
+                <a href="#">Privacidad</a>
             </div>
         </div>
     </footer>
