Cashea on the news section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
       
     </div>
 
-
+    <div class="cashea-on-the-news">
+        
+    </div>
 
     <footer>
         <div class="footer-content">
