Download app section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
       
     </div>
 
+    <div class="download-app-section">
+        <h2>Descarga nuestra app, activa tu cuenta y comienza a cashear</h2>
+        <div class="download-buttons">
+            <img class="app-store-button" src="./assets/img/download-app/appstore.png">
+            <img class="google-play-button" src="./assets/img/download-app/googleplay.png">
+        </div>
+    </div>
+
     <div class="cashea-on-the-news">
         
     </div>
