Shops section added

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
       
     </div>
 
+    <div class="shops-section">
+        <h3>Con más de 300 aliados y 3500 comercios en Venezuela</h3>
+        <h1>Con Cashea obtén al instante eso que necesitas</h1>
+        <button class="shop-now-button">Ver todas las tiendas</button>
+    </div>
+
     <div class="download-app-section">
         <h2>Descarga nuestra app, activa tu cuenta y comienza a cashear</h2>
         <div class="download-buttons">
