Cards section added

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+<!-- Version 1.1.0 -->
+
 <!DOCTYPE html>
  <html lang="en">
  <head>
@@ -50,6 +53,32 @@
         <h3>Con más de 300 aliados y 3500 comercios en Venezuela</h3>
         <h1>Con Cashea obtén al instante eso que necesitas</h1>
         <button class="shop-now-button">Ver todas las tiendas</button>
+    </div>
+
+    <div class="cards-section">
+        
+        <div class="card card-1">
+            <h4>Pre-aprobamos tus líneas de compra en tan solo 3 minutos</h4>
+            <p>Podrás utilizarla de inmediato en tus tiendas favoritas a nivel nacional.</p>
+            <button class="shop-category-button">Explora</button>
+        </div>
+
+        <div class="card card-2">
+            <h4>Compra online o en tienda, tú eliges</h4>
+            <p>Compra online o en las tiendas. ¡Ya son +3500 comercios a nivel nacional y seguimos sumando!</p>
+        </div>
+
+        <div class="card card-3">
+            <h4>Línea Cotidiana para el día a día</h4>
+            <p>Compra en supermercados, restaurantes y farmacias en cuotas sin interés.</p>
+        </div>
+
+        <div class="card card-4">
+            <h4>Más cuotas para metas más grandes</h4>
+            <p>Ahora con 6, 9, 12 y hasta 15 cuotas sin interés en compras online a través de la app.</p>
+            <button class="shop-category-button">Explora</button>
+        </div>
+
     </div>
 
     <div class="download-app-section">
