--- a/index.html
+++ b/index.html
@@ -53,6 +53,59 @@
         <h3>Con más de 300 aliados y 3500 comercios en Venezuela</h3>
         <h1>Con Cashea obtén al instante eso que necesitas</h1>
         <button class="shop-now-button">Ver todas las tiendas</button>
+
+        <div class="shops-cards">
+            <div class="shop-card shop-card-1">
+                <img class="shop-card-logo" src="./assets/img/shops-cards/1.png">
+                <h4>Tecnología</h4>
+                <button class="shop-category-button">Ver tiendas</button>
+            </div>
+            <div class="shop-card shop-card-2">
+                <img class="shop-card-logo" src="./assets/img/shops-cards/1.png">
+                <h4>Ropa</h4>
+                <button class="shop-category-button">Ver tiendas</button>
+            </div>
+            <div class="shop-card shop-card-3">
+                <img class="shop-card-logo" src="./assets/img/shops-cards/1.png">
+                <h4>Zapatos</h4>
+                <button class="shop-category-button">Ver tiendas</button>
+            </div>
+            <div class="shop-card shop-card-4">
+                <img class="shop-card-logo" src="./assets/img/shops-cards/1.png">
+                <h4>Departamental</h4>
+                <button class="shop-category-button">Ver tiendas</button>
+            </div>
+            <div class="shop-card shop-card-5">
+                <img class="shop-card-logo" src="./assets/img/shops-cards/1.png">
+                <h4>Hogar</h4>
+                <button class="shop-category-button">Ver tiendas</button>
+            </div>
+            <div class="shop-card shop-card-6">
+                <img class="shop-card-logo" src="./assets/img/shops-cards/1.png">
+                <h4>Accesorios</h4>
+                <button class="shop-category-button">Ver tiendas</button>
+            </div>
+            <div class="shop-card shop-card-7">
+                <img class="shop-card-logo" src="./assets/img/shops-cards/1.png">
+                <h4>Servicios</h4>
+                <button class="shop-category-button">Ver tiendas</button>
+            </div>
+            <div class="shop-card shop-card-8">
+                <img class="shop-card-logo" src="./assets/img/shops-cards/1.png">
+                <h4>Ferretería</h4>
+                <button class="shop-category-button">Ver tiendas</button>
+            </div>
+            <div class="shop-card shop-card-9">
+                <img class="shop-card-logo" src="./assets/img/shops-cards/1.png">
+                <h4>Deportes</h4>
+                <button class="shop-category-button">Ver tiendas</button>
+            </div>
+            <div class="shop-card shop-card-10">
+                <img class="shop-card-logo" src="./assets/img/shops-cards/1.png">
+                <h4>Departamental</h4>
+                <button class="shop-category-button">Ver tiendas</button>
+            </div>
+        </div>
     </div>
 
     <div class="cards-section">
