Nav bar implemented on a 90%

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Stack+Sans+Text:wght@299&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700;800&display=swap" rel="stylesheet">
  </head>
  <body>
 
     <div class="top-bar">
-        <img class="logo" src="./assets/img/nav-bar/logo-nav-bar.png"
+        <img class="top-bar-logo" src="./assets/img/nav-bar/logo-nav-bar.png">
+        <div class="nav-bar-items">
             <a href="#">Para usuarios</a>
             <a href="#">¿Dónde comprar?</a>
             <a href="#">Para comercios</a>
